--- a/_posts/2019-11-12-dretch.md
+++ b/_posts/2019-11-12-dretch.md
@@ -13,6 +13,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This is part of a series! Go [here][1] to see the other entries.
+
 Dretches are the pond scum of the Abyss. The name "dretch" is likely a
 contraction of "demon wretch", because these things are weak, stupid and
 stinky. Everyone bullies them back home, and more powerful demons love throwing
@@ -78,3 +80,5 @@ I guess I can kinda see why dretches were left out of the first Monster
 Manual. Sure, they're the classic low-level demons, but they don't have much
 more than tradition going for them. Still, the pull of tradition might be
 enough - I did wonder where they were when I first looked at the MM entries.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
