--- a/_posts/2019-11-29-ice-devil.md
+++ b/_posts/2019-11-29-ice-devil.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-ice-devil.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Ice devils are native to Cania, the frozen eight layer of Hell. Also known as
 Gelugons, they have an insectoid look which is significantly different from the
 norm for devils. This makes me think they were a different type of creature than
@@ -88,3 +97,5 @@ than 3e devil resistances.
 
 So to make my "optimal" gelugon I would start from the MV stat block, remove
 Warming Weakness, add the 20 fire resistance, and the Chilling Command power.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
