--- a/_posts/2019-11-30-imp.md
+++ b/_posts/2019-11-30-imp.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-imp.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 If bone and ice devils are management, then imps are door-to-door salesmen. Evil
 and evil-curious spellcasters love the little jerks. They're always willing to
 bargain for infernal secrets of power, and look too weak to pull a fast one. Of
@@ -74,3 +83,5 @@ possibly for them to be able to cast them at a higher level than 3.
 
 If you miss fireball-chucking imps, you could make artillery and/or elite
 versions that have similar combat powers.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
