--- a/_posts/2019-12-07-pit-fiend.md
+++ b/_posts/2019-12-07-pit-fiend.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-pit-fiend.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Pit fiends are the lords, barons, viziers and generals of the Nine Hells. In
 other words, its upper management, just below the VPs (the archdevils) and the
 CEO (Asmodeus). As such, they're both on the Monster Manual and on the Vault.
@@ -72,7 +81,7 @@ enough to be concerning and the legionnaires make wonderful fodder for
 Irresistible Command.
 
 Pit fiends start any fight they engage in by summoning reinforcements, because
-why wouldn't they? They then use Tactical Teleport to set up some flaking
+why wouldn't they? They then use Tactical Teleport to set up some flanking
 situations, soften targets up with Point of Terror, and then charge into the
 fray to bash and sting fools to death.
 
@@ -118,12 +127,14 @@ I find it inevitable to compare pit fiends to balors, since both are technically
 the strongest creatures in their respective factions that don't get individual
 names and backstories in the books.
 
-If you look only at their individual stats, I think Balors end up feeling being
-scarier in personal combat. They have more HP, variable resistance, and their
-direct attacks do more damage. Still, pit fiends put up a respectable show in
-that department, and are much more capable of acting as a force multiplier for
+If you look only at their individual stats, I think Balors feel scarier in
+personal combat. They have more HP, variable resistance, and their direct
+attacks do more damage. Still, pit fiends put up a respectable show in that
+department, and are much more capable of acting as a force multiplier for
 whatever other monsters are fighting with them. As with all devils, team
 composition is vital to make a combat encounter seem dangerous and scary. Even
 without the summoning ability, I'd encourage GMs to make pit fiend fights
 include a very large number of opponents, and have some of those appear by being
 summoned mid-fight.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
