--- a/_posts/2019-12-15-succubus.md
+++ b/_posts/2019-12-15-succubus.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-succubus.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Succubi are very traditional D&D monster. Just like mariliths (the _other_ sexy
 fiend), they've been a part of the game since the start. Unlike mariliths,
 sexiness is their main schtick. Here we can find them both in the Monster Manual
@@ -124,3 +133,5 @@ people. There's no restriction on the number of charmed targets! And there's
 always Dominate for preventing the PCs from running away. Clearly, the best
 succubus encounter isn't the one described above, but a succubus surrounded by
 innocent charmed victims who will do anything to protect their love.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
