Fixes and links

--- a/_posts/2019-12-16-war-devil.md
+++ b/_posts/2019-12-16-war-devil.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-malebranche.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 The War Devil, previously known as the Horned Devil and also known as the
 Malebranche, has been a staple of D&D since at least AD&D First Edition. You
 know those traditional images of winged, horned devils poking the damned with
@@ -77,3 +86,5 @@ the monster entries. Changing their name to War Devil was probably an attempt at
 making them more distinctive, but the success was mixed. Mechanically they're a
 bit like junior pit fiends, so if you're strapped for space and are already
 including pit fiends in your lineup, I can see leaving these guys out.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
