--- a/_posts/2019-12-19-devourer.md
+++ b/_posts/2019-12-19-devourer.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-devourer.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Rejoice, oh reader, for we are finally done with the devils! Our next monster is
 no less horrific, but at at least it's not a fiend.
 
@@ -123,3 +132,5 @@ presented here are all in dire need of a damage fix, but otherwise they should
 be able to scare your players both on a roleplaying and on a mechanical
 level. The soulspike devourer in particular could literally eat an ice devil for
 breakfast.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
