Drafts, pictures and post

--- a/_posts/2020-01-27-drakes.md
+++ b/_posts/2020-01-27-drakes.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This post is part of a series! Go [here][1] to see the other entries.
+
 These beasties seem to be new to Fourth Edition, at least as presented here. If
 I remember correctly, the things 3.x called Drakes were related to dragons -
 they had the Dragon "monster class" but weren't technically dragons
@@ -134,3 +136,5 @@ death threshold.
 These tiny terrors are just the thing to spruce up a kobold lair or the hideout
 of a sadistic villain, but don't overuse them. Or at least make sure your wizard
 knows Thunderwave before using more than one swarm at a time.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
