Sakura updated image

--- a/_posts/2019-09-08-sakura.md
+++ b/_posts/2019-09-08-sakura.md
@@ -7,8 +7,14 @@ tags:
 ---
 
 {::nomarkdown}
-<figure class="left">
-  <img src="{{ "/assets/IvaraNewLook.png" | absolute_url }}"/>
+<figure class="center">
+  <img src="{{ "/assets/IvaraNewLook.jpg" | absolute_url }}"/>
+  <figcaption>
+    <a
+    href="https://www.deviantart.com/spoonfishlee/art/Bayonets-and-ideas-208070649">
+    Illustration by SpoonfishLee
+    </a>
+  </figcaption>
 </figure>
 {:/nomarkdown}
 
