Updated image, again

--- a/_posts/2019-09-08-sakura.md
+++ b/_posts/2019-09-08-sakura.md
@@ -8,7 +8,7 @@ tags:
 
 {::nomarkdown}
 <figure class="center">
-  <img src="{{ "/assets/IvaraNewLook.jpg" | absolute_url }}"/>
+  <img src="{{ "/assets/d3fvoc9-a73a174b-dd47-468f-8432-b9ca56d79891.jpg" | absolute_url }}"/>
   <figcaption>
     <a
     href="https://www.deviantart.com/spoonfishlee/art/Bayonets-and-ideas-208070649">
