--- a/_posts/2020-01-31-drakes.md
+++ b/_posts/2020-01-31-drakes.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-drakes-02.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Go [here][1] to see the other entries.
+
 In this post we'll continue to look at drakes, covering the rest of the ones
 present in the MM.
 
@@ -116,3 +127,5 @@ bring along. Domesticated drakes should be a common sight in any society, which
 does a lot to make the world feel not only magical but also fresh. I'm actually
 a bit disappointed that 5th edition seems to have gone back on this and made
 them related to dragons again.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
