Big Ball O'Drafts

--- a/_posts/2020-02-01-drakes.md
+++ b/_posts/2020-02-01-drakes.md
@@ -7,7 +7,8 @@ tags:
 ---
 
 This is our third and final post on drakes, covering the two species that appear
-in the Monster Vault but not on the Monster Manual.
+in the Monster Vault but not on the Monster Manual. It's is part of a series! Go
+[here][1] to see the other entries.
 
 ## Ambush Drake
 
@@ -55,3 +56,5 @@ in the first Monster Manual. I like the bloodseekers, but ambush drakes feel a
 bit context-less to me. "Wild creature that attacks on sight" is not exactly
 something that stands out in D&D, you know? Giving them a function when tamed by
 humanoids would help giving them some more flavor.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
