--- a/_posts/2020-02-02-drow.md
+++ b/_posts/2020-02-02-drow.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Click [here][1] to see the other entries.
+
 Drow have both fascinated and horrified people since AD&D 1st Edition or
 thereabouts. Their early descriptions leaned very hard into "evil elf
 dominatrix" imagery, and their dark skin meant this portrait was often
@@ -34,8 +36,8 @@ Elves, Eladrin and Drow all descend from the same sapient fey people, which was
 originally created by Corellon and went through something of a diaspora back at
 the dawn of creation. Eladrin native to the Feywild are the closest to those
 progenitors, still worshipping Corellon as their main deity. Elves diverged from
-them after centuries of living in the world, and tend to worship Melora or the
-primal spirits.
+them after centuries of living in the world, and tend to worship Sehanine,
+Melora or the primal spirits.
 
 The Drow were recruited into the worship of Lolth and rose up against their
 kin. They were driven into the Underdark and built a thriving but nightmarish
@@ -66,7 +68,7 @@ both divine and arcane.
 All drow are Medium Fey Humanoids, have Darkvision, and one of two minor-action
 encounter powers:
 
-- a Cloud of Darkness that lasts for a tunr, blocks line of sight on a Close
+- a Cloud of Darkness that lasts for a turn, blocks line of sight on a Close
   Burst 1 and blinds everyone who enters it, with the drow being immune to all
   of this.
 
@@ -179,3 +181,5 @@ Did WotC succeed in shedding some of their Unfortunate Implications when it
 comes to drow? The descriptions here make me want to think they had some
 success, but for all I know 5e backtracked on all of this in the name of
 nostalgia.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
