--- a/_posts/2020-02-03-drider.md
+++ b/_posts/2020-02-03-drider.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Click [here][1] to see the other entries.
+
 Driders are another classic D&D monster, about as old as the drow they're
 thematically attached to. Mechanics-wise, these drow-spider beings still do
 pretty much what you would expect them to, but their background has changed
@@ -115,3 +117,5 @@ heavy frontliners, and both the standard Drider and the Fanglord fit neatly into
 that gap. The web powers from the Shadowspinner and Fanglord also do much to
 benefit drow warriors or other lurkers, granting them easy and potentially
 long-lasting combat advantage.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
