--- a/_posts/2020-02-05-dryad.md
+++ b/_posts/2020-02-05-dryad.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-dryad.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Dryads originated in Greek mythology, where they were a type of
 nymph. Mythological nymphs were basically female spirits associated with
 specific natural elements, and dryads were specifically the spirits of
@@ -179,3 +190,6 @@ in the first place!
 The MM Dryad can easily be replaced by a slightly up-leveled Dryad Hunter from
 the MV, but the Briar Witch is still quite usable after you fix its damage and
 maybe change Briar Cage a bit.
+
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
