--- a/_posts/2020-02-06-dwarf.md
+++ b/_posts/2020-02-06-dwarf.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-dryad.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Anyone reading this will know dwarves have been playable characters since the
 earliest days of D&D, and that they're largely inspired by Tolkien's works. As
 with dragonborn, this entry is for dwarves that can serve as opposition or
@@ -120,3 +131,5 @@ crushing numbers advantage.
 As for compatibility, I think the Bolter can be used as-is to represent a
 veteran dwarf warrior, but you can entirely replace the Hammerer with an
 up-leveled Clan Guard.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
