Duergar and draft updates

--- a/_posts/2020-02-10-duergar.md
+++ b/_posts/2020-02-10-duergar.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-duergar.webp" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Duergar don't feature in the first Monster Manual, being MM2 monsters, but they
 do feature in the Monster Vault, so we cover them here. Technically their entry
 comes before the one for dwarves, but I'm posting them afterwards because basic
@@ -171,3 +182,5 @@ party is likely to encounter in their careers.
 There are enough stat blocks here for you to assemble all-duergar encounters,
 and you can also add imps or legion devils as reinforcements or other humanoids
 as slaves. The late-Paragon entries are tailor made for pairing with devils.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
