--- a/_posts/2020-02-11-efreet.md
+++ b/_posts/2020-02-11-efreet.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Click [here][1] to see the other entries.
+
 Efreets are drawn from Middle Eastern mythology and Islamic tradition, which say
 they're a type of djinn often depicted as evil and associated with
 death. They've been in D&D at least since the days of First Edition as the
@@ -28,7 +30,7 @@ evil antagonists. They come from the Elemental Chaos, where their civilization
 is one of the most ordered things in that chaotic plane.
 
 Efreets are giant-sized humanoids with powerful builds, red skin, and curved
-horns, part flesh and part smokeless fire. they claim they are the firstborn of
+horns, part flesh and part smokeless fire. They claim they are the firstborn of
 the Primordials and as such are the rightful heirs to their domains and
 creations. That doesn't mean they _worship_ the Primordials - Efreets don't
 really worship anyone but themselves and intensely dislike being placed in any
@@ -225,3 +227,5 @@ possiblity that there are efreets out there who managed to turn out Good anyway,
 possibly due to converting to worship of a good god. This is both an interesting
 development and true to the original stories, which often features djinns of all
 kinds who turned good because they converted to Islam.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
