--- a/_posts/2020-02-12-eidolon.md
+++ b/_posts/2020-02-12-eidolon.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Click [here][1] to see the other entries.
+
 I hadn't heard of eidolons before Fourth Edition, but I seem to recall the word
 was used in 3.x too. They are only on the Monster Manual.
 
@@ -24,7 +26,7 @@ Eidolons are intelligent constructs created through divine magic. The ritual for
 their creation involves a crystalized spark of divinity which is buried deep
 into the eidolon's structure. While the one from the illustration is a somewhat
 abstract humanoid, I imagine they're frequently built in the shape of the
-deities their creators worship, or as literal idols.
+deities their creators worship.
 
 Eidolons are considered more than simple tools - they also serve as a symbol of
 their creator's devotion. Sometimes, though, that spark of divinity inside the
@@ -32,8 +34,8 @@ eidolon goes bad, which causes the creature to suffer from delusions of godhood
 and to act with murderous intent towards anyone who disagrees.
 
 If all of this sounds familiar it's because it's somewhat similar to the lore
-for clay golems - constructs created by divine magic who sometimes go berserk
-and turn on their creators. The main difference here would be one of
+for D&D clay golems - constructs created by divine magic who sometimes go
+berserk and turn on their creators. The main difference here would be one of
 purpose. While clay golems are traditionally mindless solitary guardians,
 eidolons are built to support and inspire their correligionists, and so are
 always found among the faithful. It also helps that clay golems are absent from
@@ -82,3 +84,5 @@ remain completely still during the fight and let their reaction and passive
 powers do the work. It's quite possible for the party to not realize they're
 dealing with an eidolon until the Vengeful Flames begin to kick in when the
 other monsters drop.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
