--- a/_posts/2020-02-13-eladrin.md
+++ b/_posts/2020-02-13-eladrin.md
@@ -6,6 +6,17 @@ tags:
     - dnd4
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-eidolon.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 I've already talked about eladrin in passing when discussing drow, and now I'm
 going to get into more detail on them. They're present in both books, though
 they're mixed into the general "Elf" entry on the Monster Vault.
@@ -200,3 +211,5 @@ better solution than others I've seen that ended up loading up a single "elf"
 race with bonuses related to both concepts. They're also really atmospheric on
 their own, of course, and allow players to portray genuine fae folk from level 1
 if they so choose.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
