--- a/_posts/2020-02-17-elf.md
+++ b/_posts/2020-02-17-elf.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-elemental.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 I've mentioned elves plenty of times already, and now it's time to talk about
 them properly. They've been available as a playable character option since the
 days of Basic (though arguably Basic elves were closer to eladrin).
@@ -121,3 +132,5 @@ strangers on sight.
 A little rejiggering of signature traits and the addition of spiders can also
 turn the sample encounter into a party of drow scouts for some early-Heroic
 foreshadowing of Underdark shenanigans.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
