--- a/_posts/2020-02-17-elf.md
+++ b/_posts/2020-02-17-elf.md
@@ -8,7 +8,7 @@ tags:
 
 {::nomarkdown}
 <figure class="right">
-  <img src="{{ "/assets/wir-mm-4e-elemental.png" | absolute_url }}"/>
+  <img src="{{ "/assets/wir-mm-4e-elf.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2008 Wizards of the Coast
   </figcaption>
