--- a/_posts/2020-02-19-ettercap.md
+++ b/_posts/2020-02-19-ettercap.md
@@ -6,6 +6,17 @@ tag:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-ettercap.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 My first contact with ettercaps was in Neverwinter Nights, where if you found a
 bunch of giant spiders in a lower-level module you could be sure an ettercap
 wasn't far behind. They've been around since at least 2nd edition, when they
@@ -94,3 +105,5 @@ than the numbers might indicate.
 In the end I see no reason to include ettercaps in your game unless you're going
 all-in on the spider theme, and I don't lament their absence from the Monster
 Vault.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
