--- a/_posts/2020-02-26-ettin.md
+++ b/_posts/2020-02-26-ettin.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-ettin.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Ettins are two-headed giants who have been a part of the game since at least
 AD&D 1st Edition. Capitalization is important here - ettins are giants, not
 Giants, in the sense that they've never been part of the Giant entry. They're
@@ -145,3 +156,5 @@ and have a strong signature gimmick. Their levels make them a good fit for an
 adventure that says "welcome to paragon tier! Now you're going Against the
 Giants." Ettins are weaker than hill giants in this edition, so they're the
 first humanoid of unusual size the PCs are likely to fight.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
