--- a/_posts/2020-03-07-fomorian.md
+++ b/_posts/2020-03-07-fomorian.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-fomorian.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 We've heard a bit about fomorians back when we discussed cyclopes, and now we
 finally arrive at their own entry. I believe fomorians appeared in 3.x, and
 might date from earlier, but their lore for 4e is mostly new.
@@ -87,3 +98,5 @@ similarly inclined people.
 The two stat blocks we get here seem a little underwhelming to me, given the
 lore, but they do their jobs relatively well. We get a much more varied
 selection of fomorians when we hit the MM2.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
