--- a/_posts/2020-03-12-gargoyle.md
+++ b/_posts/2020-03-12-gargoyle.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-gargoyle.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Gargoyles are based on sculptures found in many medieval buildings (particularly
 churches). If I recall correctly, these statues depict horrible beasts and are
 said to act as a sort of spiritual scarecrow, frightening demons away. They're
@@ -33,7 +44,7 @@ are easier to bind!
 The Monster Vault makes an interesting inversion by saying that in the world of
 D&D, the gargoyle's reputation for cruelty has turned its image into a sign of
 warning to intruders. This means that people in the setting have a reason to
-sculpt gargoyles into their buildings! The monsters of course end up
+sculpt gargoyles into their buildings! Ironically, the monsters end up
 gravitating to these places since they provide such convenient camouflage.
 
 ## The Numbers
@@ -129,3 +140,5 @@ to mechanics, and you lose nothing by ignoring the Monster Manual on this
 one. Lore-wise, I feel gargoyles are one of those monsters so classic that you
 almost _have_ to feature them in your campaign at some point. The big subversion
 here would be a campaign where every statue was exactly what it seemed.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
