--- a/_posts/2020-03-18-ghost.md
+++ b/_posts/2020-03-18-ghost.md
@@ -6,6 +6,17 @@ tags:
     - dnd4
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-ghost.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 D&D is famous for making every synonym of a word into an entirely separate
 monster, and nowhere is this more obvious than with incorporeal undead. Previous
 editions had wraiths, specters, phantoms, haunts and ghosts be entirely
@@ -168,3 +179,5 @@ Maybe it has something to do with them being insubstantial? After all, this
 makes them last twice as long in a fight as their HP would indicate. None of
 them have any additional traits that make them especially vulnerable to a
 specific type of damage, so their insubstantiality applies to everything.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
