Small addition to the ghost post

--- a/_posts/2020-03-18-ghost.md
+++ b/_posts/2020-03-18-ghost.md
@@ -178,6 +178,9 @@ less damage than could be explained even by the standard damage bug.
 Maybe it has something to do with them being insubstantial? After all, this
 makes them last twice as long in a fight as their HP would indicate. None of
 them have any additional traits that make them especially vulnerable to a
-specific type of damage, so their insubstantiality applies to everything.
+specific type of damage, so their insubstantiality applies to everything. By the
+time the Monster Vault had been published, insubstantial monsters took full
+damage from force attacks, so you could say this applies to the MM ghosts as
+well.
 
 [1]: {{ "/projects/mm-4e/" | relative_url }}
