--- a/_posts/2020-03-20-ghoul.md
+++ b/_posts/2020-03-20-ghoul.md
@@ -6,12 +6,23 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-ghoul.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Ghouls have been in D&D since the beginning, which makes them an example of two
 classic D&D practices: arranging monsters in a power ladder, and making every
 synonym of a word into a different monster.
 
-They're a step up from zombies in the undead power ladder, and since the word
-"zombie" in D&D applies to slow shamblers, the faster and more voracious "Romero
+They were a step up from zombies in the undead power ladder, and since the word
+"zombie" in D&D applied to slow shamblers, the faster and more voracious "Romero
 Zombies" got called Ghouls. Here, they're present in both books.
 
 ## The Lore
@@ -186,3 +197,5 @@ We get four, spanning the entire level range.
 
 If you're playing D&D, you gotta have ghouls. The MV assortment is the superior
 one, so use that if possible.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
