A whole buncha updates

--- a/_posts/2020-03-30-giants.md
+++ b/_posts/2020-03-30-giants.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/friendly-giant.jpg" | absolute_url }}"/>
+  <figcaption>
+    Definitely not a D&D illustration
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Giants are present in D&D since the beginning, making up one of the games most
 famous "monster ladders". How famous? It got a whole module trilogy to itself,
 named Against the Giants, which got reprised and homaged in several editions
@@ -44,14 +55,15 @@ world and the planes, and when the Primordials retreated from the world they
 inherited it, and created one of its first empires. It was around this time that
 the creations of the gods began to appear, and the Giants were already there to
 enslave them. Most notable among these slaves were the dwarves, children of
-Moradin, who endured a remarkably thorough and cruel enslavement of their whole
-population for many generations.
+Moradin, whose entire population endured a centuries-long period of cruel
+servitude.
 
 When the Dawn War started, the titans and giants sided with the
 primordials. Though there weren't many of them, their immense individual power
 gave them victory in many battles, filling their castles with pillaged
-loot. Attrition from the long war took its toll even on them, though, allowing
-the sudden dwarven rebellion to succeed and deal the final blow to their empire.
+loot. Attrition from the long war took its toll even on these mighty beings,
+though, allowing the sudden dwarven rebellion to succeed and deal the final blow
+to their empire.
 
 Today's giants are still sore about their downfall. They dream of casting down
 the gods and rebuilding what they had, but they never managed to organize enough
@@ -77,9 +89,10 @@ Between the Monster Manual and the Monster Vault, we get the following giant
 types, arranged from weakest to strongest: Earth, Ice, Fire, Death and
 Storm. Each type presents one or more giant stat blocks and one Titan.
 
-That first category includes Hill Giants - Stone giants also exist and
-fall under Earth, but don't appear in the two books we're covering in this
-series.
+That first category includes Hill Giants - Stone giants also exist and fall
+under Earth, but don't appear in the first Monster Manual or on the Vault.
 
 The first three rungs of this ladder comprise the Agains the Giants set, which
 means those modules could make a fine Paragon-tier campaign for 4e.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
