gnolls gnolls gnolls

--- a/_posts/2020-04-20-gnoll.md
+++ b/_posts/2020-04-20-gnoll.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-gnoll.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Gnolls have been in the game since the beginning or close to it, when they fit
 in the Humanoid Power Ladder right above hobgoblins and before bugbears. In 4e,
 they are present in both books.
@@ -235,3 +246,5 @@ Anyway, these stat blocks make for mechanically interesting enemies and we have
 enough of them to build entire dungeons with nothing but gnolls as the
 opposition. Do grab that Dragon article if you can, I remember the playable
 version was also quite good.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
