--- a/_posts/2020-04-21-gnome.md
+++ b/_posts/2020-04-21-gnome.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-gnome.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][2] to see the other entries.
+
 Gnomes were introduced as a playable race in the days of AD&D, where they had a
 niche as the nonhuman illusionists and were otherwise slightly smaller
 dwarves. The removal of class and level restrictions in 3.x turned them into one
@@ -184,3 +195,5 @@ well, though theirs are less sneaky and more whimsical. This version of gnomes
 survives in 5e as the "Forest Gnome" subrace.
 
 [1]: https://www.youtube.com/watch?v=4UqFPujRZWo
+
+[2]: {{ "/projects/mm-4e/" | relative_url }}
