goblins goblins goblins

--- a/_posts/2020-04-25-goblins.md
+++ b/_posts/2020-04-25-goblins.md
@@ -6,13 +6,24 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-goblin.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Like all goblinoids, Actual Goblins have been a part of D&D since the beginning,
 occupying the second rung of the Humanoid Power Ladder in those editions where
 it was a thing. In Fourth Edition, they remain one of the first enemies a PC
 party is likely to fight. Because of this they get a large number of stat blocks
 across both books.
 
-Since we're already looked at goblin lore earlier, let's skip right to
+Since we're already looked at goblin lore earlier, let's skip right to...
 
 ## The Numbers
 
@@ -183,3 +194,5 @@ to do that.
 Eberron kinda went this way, if I recall correctly. 5e has gone in the other
 direction and turned goblinoids as a whole into some sort of unstoppable fascist
 army.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
