golems golems golems

--- a/_posts/2020-04-30-golem.md
+++ b/_posts/2020-04-30-golem.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-golem.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Golems have been in the game since the beginning. They became so popular that
 they ended up giving rise to the whole construct taxonomy as more things that
 were like them were published to capitalize on the hype.
@@ -158,3 +169,5 @@ entirely. It's understandable - pretty much anything an arcane or divine
 character can do against a monster is technically "magic", so you don't want to
 make half the party completely useless against golems. Also, spell resistance is
 not a thing in this edition.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
