--- a/_posts/2020-05-01-bugbears.md
+++ b/_posts/2020-05-01-bugbears.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-golem.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Like the other goblinoids, bugbears have been in the game since the beginning,
 when they were the most powerful of the "proper" humanoids at 3+1 HD. The next
 step up from them were ogres, who occupied that nebulous area between "humanoid"
@@ -112,3 +123,5 @@ that allowed a PC to do the same.
 While only one of the stat blocks depicts an actual lurker, they're all
 well-provided with abilities that allow them to attack from ambush to good
 effect. Forget goblins, bugbears are the real sneaky gits here.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
