--- a/_posts/2020-05-04-gorgon.md
+++ b/_posts/2020-05-04-gorgon.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-gorgon.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 In Greek mythology, the Gorgons are a trio of sisters whose bodies were partly
 composed of snakes and whose visage could turn people to stone. Medusa was one
 of the Gorgons (the other were Stheno and Euryale). If you say the word "Gorgon"
@@ -101,3 +112,5 @@ statues left over from the process of becoming adept at gorgon-ranching too.
 You know who else might be good at herding gorgons? The githzerai. They'd have
 to be if they use animal products at all. Normal cattle would have trouble
 surviving in the Elemental Chaos.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
