--- a/_posts/2020-05-06-grell.md
+++ b/_posts/2020-05-06-grell.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-grell.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Grells have been around since at least the 2e Monstrous Manual. In Fourth,
 they're only on the MM, but they got an update in Dungeon 192.
 
@@ -113,3 +124,5 @@ assign to a grell encounter, these items might be a good inspiration.
 Philosophers. Patriarchs were large sapient masses of flesh that acted as the
 core of spelljammer vessels. If you're including spelljamming in your campaign
 you could bring them back.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
