gricks gricks gricks

--- a/_posts/2020-05-07-grick.md
+++ b/_posts/2020-05-07-grick.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-grick.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 I remember seeing Gricks for the first time in 3.0, but I wouldn't be surprised
 if they appear earlier than that. In this edition they're only on the MM.
 
@@ -86,3 +97,5 @@ Thus we get our two sample encounters:
 
 I like their mechanics, but the lore doesn't inspire me all that much. They work
 well enough as an incidental encounter for "natural cave" dungeons, I suppose.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
