griffon griffon griffon

--- a/_posts/2020-05-08-griffon.md
+++ b/_posts/2020-05-08-griffon.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-griffon.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Another fantasy classic, these lion-eagle hybrids have a different spelling for
 their name in every source they appear in. D&D has always gone with "Griffon"
 and has featured them in its bestiaries since at least BECMI and AD&D 1st
@@ -40,7 +51,7 @@ and there's a thriving black market on young specimens.
 Even the Elemental Chaos has its own griffon species in the form of the Rimefire
 Griffon, a formidable beast that the book describes as being sapient, unlike its
 natural cousins. It's not exactly a genius at Int 4, but it still "allies" with
-ice archons or gets "pressed into service" by efreets.
+ice archons or gets "pressed into service" by efreets instead of being "tamed".
 
 ## The Numbers
 
@@ -120,3 +131,5 @@ I like them, particularly the emphasis on them being mounts. I get the feeling
 that investing in horses in D&D's implied setting is a fool's game. You have
 boar-riding dwarves, griffon-riding elves, human knights on hippogriffs, and I'm
 sure there's a ridable drake somewhere. Warhorses are so last edition.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
