--- a/_posts/2020-05-11-grimlock.md
+++ b/_posts/2020-05-11-grimlock.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-grimlock.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Grimlocks appeared in a Monster Manual for the first time in AD&D 2nd Edition,
 though it's likely they appeared in a 1e or earlier supplement before that. I'm
 pretty sure they're inspired by the Morlocks from H. G. Wells' The Time
@@ -93,3 +104,5 @@ Mechanically they're a bit weak, heavily affected by the damage bug due to being
 paragon-tier opponents. Even the berserker's power attack falls short of what
 its basic damage output should be according to the new math. Fixing that is a
 priority if you want to use grimlocks as opposition.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
