--- a/_posts/2020-05-13-guardian.md
+++ b/_posts/2020-05-13-guardian.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-guardian.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 I remember first reading about Shield Guardians in 3e, which is when you start
 getting a lot of new constructs that are not golems. I'm not sure if they
 appeared earlier than that or not. Guardians appear only on the MM here.
@@ -80,3 +91,5 @@ several different ways to make a loyal construct, given that they all want one
 and none of them is fond of sharing secrets. Having a huge variety of constructs
 detracts from their uniqueness while shining the spotlight on the idiosyncrasies
 of their creators, so it's up to you which way you want to go.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
