--- a/_posts/2020-05-17-halfling.md
+++ b/_posts/2020-05-17-halfling.md
@@ -6,6 +6,17 @@ tags:
     - dnd4
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-halfling.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Halflings have existed since the beginning of D&D. Though they don't appear
 among the original classes, IIRC they were introduced in a very early
 supplement. Their original inspiration is of course Tolkien's hobbits. Early
@@ -18,7 +29,7 @@ Monster Manual and Monster Vault.
 
 Like the halflings of most other editions, those in the implied setting of
 Fourth have no nation to call their own. The big difference here is that they're
-not alone in this, as this is also true of a lot of others.
+not alone in this, as it's also true of a lot of others.
 
 Halflings most often live in other people's cities. Their own settlements are
 always built on the margins of rivers, and make extensive use of them for both
@@ -143,3 +154,5 @@ are _not_ compelled to steal from the party and have enough sense to recognize
 dangerous situations and avoid drawing themselves or the party into them. It
 won't prevent a bad player from doing those things anyway, but they can't hide
 behind the "I'm just playing my character!" excuse.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
