--- a/_posts/2020-06-14-troika.md
+++ b/_posts/2020-06-14-troika.md
@@ -33,8 +33,8 @@ Fantasy Roleplaying Game"... from another world.
 
 The art style is what first caught my eye in some advertising banners I saw on
 RPG.net. The core book was a bit too expensive for me given the current BRL/USD
-exchange rate, but fortunately it came with the Itch.io Bundle For Racial
-Equality, so I gave it a read.
+exchange rate, but fortunately it came with the [Itch.io Bundle For Racial
+Justice and Equality][1], so I gave it a read.
 
 The cover is quite trippy, and the internal layout gives the pages a pleasant
 cream background color, wide margins, and single-color text in a font that's
@@ -117,3 +117,5 @@ me feel like the authors were still a bit too attached to the "dungeon crawl"
 paradigm. If you do GM it, I would recomment spreading the weirdness out a lot
 more, and using it for picaresque adventures that run at a calmer pace than the
 frantic "try not die while getting to your hotel room" scenario presented here.
+
+[1]: https://itch.io/b/520/bundle-for-racial-justice-and-equality
