--- a/_posts/2020-06-22-lich.md
+++ b/_posts/2020-06-22-lich.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-lich.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Lichs are the original horrible undead wizards of D&D, having existed since
 the beginning. They're both in the 4e Monster Manual and the Vault.
 
@@ -79,14 +90,20 @@ another 10 days to build and cost 50,000gp. Feel free to include any amount of
 baby-eating you require to mark this whole process (both building and casting)
 as irredeemably evil.
 
+Early in 4e, "Lich" is a monster template presented in the DMG, which the
+Monster Manual applies to a "Human Necromancer" and an "Eladrin Wizard" stat
+block. By the time the Monster Vault had been written those templates had fallen
+out of favor, so its stat blocks are built from scratch while observing the same
+themes.
+
 On to the stat blocks!
 
 ### Lich (Human Necromancer) (MM)
 
-Labeled "Lich (Human Necromancer)" in the MM, this is a Medium Natural Humanoid
-(undead) and a Level 14 Elite Controller with 218 HP (MM). It has Speed 6,
-Darkvision, Resist 10 Necrotic, and immunity to disease and poison. It also has
-Regeneration 10, which can be turned off for a turn by radiant damage.
+This is a Medium Natural Humanoid (undead) and a Level 14 Elite Controller with
+218 HP (MM). It has Speed 6, Darkvision, Resist 10 Necrotic, and immunity to
+disease and poison. It also has Regeneration 10, which can be turned off for a
+turn by radiant damage.
 
 This lich surrounded by a **Necromantic Aura** with a radius of 5 squares, which
 deals 5 necrotic damage to anyone caught inside. Against civilians with 1 HP,
@@ -142,7 +159,8 @@ If you need a level 14 lich, use this one and forget the one on the MM.
 
 This is pretty much a level 24 version of the human necromancer lich. It's a
 Level 24 Elite Controller with 262 HP and exactly the same passive traits,
-speed, immunities, resistances, and so on. Even the numbers are the same.
+speed, immunities, resistances, and so on. Even the numbers on the resistances
+are the same.
 
 Like its weaker counterpart, this lich lacks a melee attack. It attacks at range
 with a **Shadow Ray** that does necrotic damage, and occasionally upgrades it to
