--- a/_posts/2020-06-22-lich.md
+++ b/_posts/2020-06-22-lich.md
@@ -229,3 +229,5 @@ knight, a vampire and so on.
 Mechanically, you should ignore the liches from the Monster Manual and focus on
 the ones from the Vault, which are much better designed. If you want to create
 your own varieties, base them on the MV liches and their signature traits.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
