--- a/_posts/2020-07-03-marut.md
+++ b/_posts/2020-07-03-marut.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-manticore.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 My first contact with Maruts was in Third Edition, where they were a type of
 Inevitable, a Lawful Neutral outsider. It could be that they predate that
 edition (though AD&D was all about modrons instead). Here, they appear only on
@@ -82,3 +93,5 @@ along with the Great Wheel cosmology. Personally, while I think 3e inevitables
 were interesting, I also like the new lore. Enigmatic mercenaries stockpiling
 favors for some future cosmic plan is an interesting background that leaves room
 for GM creativity.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
