--- a/_posts/2020-07-08-medusa.md
+++ b/_posts/2020-07-08-medusa.md
@@ -14,6 +14,15 @@ since the beginning.
 
 ## The Lore
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-medusa-female.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 As is common with creatures based on singular entities from Greek Myth, D&D
 medusas are an entire species of humanoids with snake-like features. Females
 have the iconic hair snakes, and their gaze can petrify victims. Males are
@@ -39,6 +48,16 @@ said to truly respect.
 Medusas like to decorate the area around their lairs as demarcation and
 warning. There's the classic statue gardens, of course, and males also like to
 paint the walls with the blood of their victims.
+
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm-4e-medusa-male.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 
 The Monster Vault also turns them into another of those evil matriarchies where
 males are oppressed, with only those few who are immune to petrification being
