--- a/_posts/2020-08-05-naga.md
+++ b/_posts/2020-08-05-naga.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Let's Read the 4e Monster Manual/Vault"
+title: "Let's Read the 4e Monster Manual/Vault: Naga"
 tags:
     - dnd4
     - lets-read
@@ -8,7 +8,7 @@ tags:
 
 {::nomarkdown}
 <figure>
-  <img src="{{ "/assets/wir-mm-4e-doppelganger.png" | absolute_url }}"/>
+  <img src="{{ "/assets/wir-mm-4e-naga.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2008 Wizards of the Coast
   </figcaption>
@@ -44,9 +44,8 @@ they're not inherently associated with that deity.
 
 ## The Numbers
 
-Nagas are Large Magical Beasts with the Reptile keyword, and their origin
-actually varies depending on the specific naga. Their origin is typically
-Immortal, but there's one exception here. They have Darkvision, very high Int
+Nagas are Large Magical Beasts with the Reptile keyword. Their origin is
+typically Immortal, but that can vary. They have Darkvision, very high Int
 scores, speak several languages, and have plenty of mental skills, such as
 Arcana, Insight, History, and so on. Their specific powers vary per stat block,
 but there's always something snaky and something magical.
@@ -69,9 +68,8 @@ around so most PCs are immobilized, and then focus on what it perceives to be
 the biggest threats.
 
 If someone manages to get close, it will **Spit Poison** at them (close blast 3
-vs. Fortitude; recharge 5-6). This obviously does immediate and ongoing poison
-damage, and it also inflicts a -2 penalty to Fortitude and saves (save ends
-all).
+vs. Fortitude; recharge 5-6). This does immediate and ongoing poison damage, and
+it also inflicts a -2 penalty to Fortitude and saves (save ends all).
 
 Only when it has no other alternative will the guardian naga fight in melee. Its
 only weapon there are weak **Tail Slaps** that do some damage and push 2 squares
@@ -81,7 +79,7 @@ on a hit.
 
 This skeletal naga is a Level 16 Elite Controller with 328 HP. As an undead
 being, it's immune to disease and poison, has Resist 20 necrotic, and Vulnerable
-10 Ratiant. It rattles along at speed 7.
+10 Radiant. It rattles along at speed 7.
 
 Despite their sinister looks and undead-ness, bone nagas are Unaligned. Their
 mission usually involves guarding dangerous necromantic secrets, or tombs where
