--- a/_posts/2020-08-13-ogre.md
+++ b/_posts/2020-08-13-ogre.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-ogre.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Ogres have been a part of D&D since its beginnings, when they were the bridge
 between the Humanoid and Giant power ladders. Here, they are present in both
 books.
@@ -34,14 +45,13 @@ some agriculture and built villages/steadings of their own. It also feels like
 it's easier to parley with hill giants than with ogres.
 
 Despite their strength, ogres are easily recruited into service by monsters who
-are stronger or more numerous than they are. This usually happens through a
+are more powerful or more numerous than them. This usually happens through a
 combination of intimidation and food bribes. Ogres can be found working as shock
 troops for orc or gnoll bands, or as auxiliaries and menial labor for hags,
 dragons, and giants. Some of these patrons provide their ogre lackeys with
-combat training and improved weapons, making them more dangerous. Some ogre
-geniuses have an Int as high as 8 and willingly seek out the mercenary life,
-working for money and arranging that improved gear and training by their own
-initiative.
+combat training and improved weapons, making them more dangerous. Smarter ogres
+willingly seek out the mercenary life, working for money and arranging that
+improved gear and training by their own initiative.
 
 ## The Numbers
 
@@ -50,8 +60,8 @@ The traditional role of ogres in older editions of D&D is as the star of a
 to face, but which they can defeat once they gain some XP and their players
 become a bit savvier. Maybe you put them near the stairs to the second dungeon
 level, or guarding some prime loot in a corner of the goblin lair or kobold
-warren. When fighting ogres became easy for the group, they knew they had made
-it out of the junior leagues. With some thought given to encounter design, it's
+warren. When fighting ogres became easy for a group, they knew they had made it
+out of the junior leagues. With some thought given to encounter design, it's
 still possible to have ogres in these roles.
 
 Ogres are Large Natural Humanoids. The Monster Vault also gives them the Giant
@@ -124,8 +134,8 @@ entirely superseded by the MV Hunter.
 
 ### Ogre Mercenary (MV)
 
-One of da smart 'uns what works fer gold. This one is a Level 8 Soldier with 93
-HP and an amazing Int of 7. It fights in melee with a Reach 2 **morningstar**
+One of those smarter ogres who works for gold. This one is a Level 8 Soldier
+with 93 HP and an Int of 7. It fights in melee with a Reach 2 **morningstar**
 that marks for a turn on a hit, and throws Range 10 **handaxes** to fight from
 afar.
 
@@ -158,9 +168,9 @@ loop until they have shifted their whole speed! They can stop early if that's
 not practical, but for every square they push the target beyond the first they
 do 1d8 damage do it!
 
-7d8 damage is actually in line with a level 10 "limited use attack", but it
-looks impressive because that's a lot of dice _and_ your PC just got kicked all
-over the battlefield like a soccer ball.
+7d8 damage is in line with a level 10 "limited use attack", but it looks extra
+impressive because that's a lot of dice _and_ your PC just got kicked all over
+the battlefield like a soccer ball.
 
 ### Ogre Minions (MM)
 
@@ -178,10 +188,10 @@ minions. Like Mouseketeers, but with more violence.
 If you take a typical ogre and train them for a few years at the blood-sport
 arenas of the Black Eagle Barony, this is what you get.
 
-These ogres are Level 14 Brutes with 173 HP and a genius intellect of 8. They
-wield **greataxes** in combat, and aside from their beefy basic attack they can
-often make **Vorpal Sweeps** (Close Burst 2; enemies only; recharge 6) that do a
-bit less damage to each target and deal ongoing 10 damage (save ends).
+These ogres are Level 14 Brutes with 173 HP and an Int score of 8. They wield
+**greataxes** in combat, and aside from their beefy basic attack they can often
+make **Vorpal Sweeps** (Close Burst 2; enemies only; recharge 6) that do a bit
+less damage to each target and deal ongoing 10 damage (save ends).
 
 Simple, but effective. And while this isn't stated in their stat blocks, those 4
 extra points of Int mean this ogre is much more capable of understanding tactics
@@ -211,3 +221,6 @@ possible. If you can't, updating the damage of the MM ogres and giving the
 Warhulk a second attack (or making it a regular instead of an elite) should make
 them workable enough. Ogre stat blocks can also be used to represent younger or
 weaker hill giants, like they were in the classic Against the Giants adventures.
+
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
