--- a/_posts/2020-08-17-oni.md
+++ b/_posts/2020-08-17-oni.md
@@ -9,6 +9,9 @@ tags:
 {::nomarkdown}
 <figure class="left">
   <img src="{{ "/assets/wir-mm-4e-oni.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
 </figure>
 {:/nomarkdown}
 
