--- a/_posts/2020-09-02-ooze.md
+++ b/_posts/2020-09-02-ooze.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-oni.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Jellies, slimes, molds, puddings. Collectively known as "oozes", these are
 likely the most iconic D&D monsters not exempted from the OGL. Talk about
 dragons all you want, but I'll bet you far more adventuring parties have faced
@@ -40,8 +51,8 @@ corridor is a sure sign that you're approaching an ooze lair.
 In addition to the no doubt large variety of natural species, these things are
 also quite likely to form as the result of botched magical experiments, or to
 spontaneously form in piles of magical waste. They're even easy to _summon_, so
-your PCs might end up fighting them when they go up against a particular sort of
-wizard.
+your PCs might end up fighting them when they go up against the sort of wizard
+who's into that.
 
 ## The Numbers
 
@@ -173,3 +184,5 @@ entries and going all in on the Vault's versions. They have almost the full set
 of classic oozes, and despite the many attempts by 3e to prove otherwise,
 they're enough for the vast majority of campaigns. It's not D&D if it doesn't
 have some icky goo in it somewhere.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
