--- a/_posts/2020-09-04-orc.md
+++ b/_posts/2020-09-04-orc.md
@@ -31,8 +31,8 @@ technically doesn't want to see the world destroyed, but the difference is lost
 on the poor sods on the receiving end of a raid by either set of worshippers.
 
 Orcs organize themselves in large tribes who will usually move into a region,
-take over an empty town (possibly after emptying it themselves) or natural cave
-complex, and fortify it into a defensible base. Then they split into smaller
+take over a natural cave complex or an empty town (possibly after emptying it
+themselves), and fortify it into a defensible base. Then they split into smaller
 bands of scouts and raiders to methodically plunder the surrounding region, and
 move on once there's no more loot to be had. Sometimes a chief will take a
 liking to a given home base and order the tribe to settle in it, which means
@@ -41,9 +41,9 @@ hills and mountains, which means they end up fighting dwarves a lot of the time.
 
 Orcs take slaves in their raids, but never manage to keep them for long because
 they always end up working them to death in short order. They're also gleefully
-cannibalistic towards anyone not of their tribe, even other orcs. They also
-routinely work alongside ogres, because it's super easy for them to bully ogres
-into service.
+cannibalistic towards anyone not of their tribe, even other orcs. They routinely
+work alongside ogres, because it's super easy for them to bully ogres into
+service.
 
 Most GMs I know tend to tone down their campaign's portrait of orcs from the
 unrelenting badness described above. Eberron shows them in a much better light,
@@ -51,16 +51,20 @@ having not just one but _two_ different Lawful Good orcish cultures dedicated to
 guarding against aberrant and demonic invasions (respectively). Even in old D&D
 they were not always the opposition: hiring orcish mercenaries was a common
 thing for adventurers to do, and it wasn't always assumed that the orc
-encampments you found in a given area were hostile and there to be raided.
-
-The numbers below cover the fanatical Gruumsh worshipper kind of orc.
+encampments you found in a given area were hostile and there to be
+raided.
 
 ## The Numbers
+
+The numbers below were built with the "unrelenting badness" version of the lore
+in mind, but they _could_ be used for non-evil orcs with relatively little
+change. It's also possible to turn other "natural humanoid" stat blocks into
+orcs by swapping signature traits around, as usual.
 
 Orcs are Medium Natural Humanoids and typically Chaotic Evil. They have
 low-light vision and base Speed 6.
 
-Their other mechanical schticks change between books. In the Monster Manual all
+Their other mechanical tricks change between books. In the Monster Manual all
 orcs have a +2 bonus to speed when charging, and all non-minions have an attack
 called **Warrior's Surge**, which allows them to make a melee basic attack and
 recover 25% of their HP. Most MM orcs are also trained in Endurance.
@@ -108,9 +112,9 @@ The **Battleaxe** deals +5 damage on a charge and have a higher base damage than
 the **handaxes**, which means the orc will only really use the latter if there's
 some sort of chasm between it and the PCs.
 
-It can also use the battlaxe for a **Hacking Frenzy** (close burst 1; enemies
-only; recharge 5-6), an all-out attack which marks everyone it hits for a turn
-but makes the orc grant combat advantage for the same amount of time.
+It can use the battlaxe for a **Hacking Frenzy** (close burst 1; enemies only;
+recharge 5-6), an all-out attack which marks everyone it hits for a turn but
+makes the orc grant combat advantage for the same amount of time.
 
 ### Orc Archer (MV)
 
@@ -276,15 +280,17 @@ Over the several encounters listed, we have the following orc allies: dire
 boars, dire wolves, ogres, and there's even an oni here, though in this case I
 would say the oni is running the show.
 
-Mechanically, I think the Monster Vault orcs are by far the best. Savage Demise
-is both very flavorful and effective, without the potential issues of Warrior's
-Surge.
+Mechanically, I think the Monster Vault orcs are by far the best. Despite the
+name, Savage Demise is very effective and doesn't run the risk of making fights
+drag on for too long like Warrior's Surge.
 
 Lore-wise, well, there's a reason orcs are almost always used as the main
 example for why D&D's traditional take on "savage humanoids" is problematic. I
 tend to prefer settings which make them at least equivalent to humans in
 variety, where their alignment is an individual choice and not a species-wide
-label. Eberron's guardian orcs are quite nice as well.
+label. Eberron's guardian orcs are quite nice as well. Wizards of the Coast has
+recently committed to improving the way they portray orcs and other humanoids,
+but I think we've yet to see the results of those efforts.
 
 One interesting thing you could do is to use the lore above for _Gruumsh
 worshippers_ of any species. It would make perfect sense for Gruumsh to be a
