--- a/_posts/2020-09-10-orcus.md
+++ b/_posts/2020-09-10-orcus.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-orcus.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Orcus has been in the game since at least AD&D 1st Edition, and is the strongest
 monster in the 4e Monster Manual. He is not in the Monster Vault.
 
@@ -101,6 +110,15 @@ The deathpriest's damage is a full 9 points less than it should be, and really
 needs a fix.
 
 ### Deathprest Hierophant
+
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-deathpriest.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 This is likely Orcus' most powerful living agent in any given campaign world,
 and well on the way to becoming a lich or something equivalent. It's a Level 21
