Add Orcus to project page

--- a/_posts/2020-09-10-orcus.md
+++ b/_posts/2020-09-10-orcus.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This is part of a series! Go [here][1] to see the other entries.
+
 Orcus has been in the game since at least AD&D 1st Edition, and is the strongest
 monster in the 4e Monster Manual. He is not in the Monster Vault.
 
@@ -283,3 +285,5 @@ Mechanical details aside, this feels right. If I manage to reach level 30 in a
 campaign, I want to end it with a bang by taking out one of the big name
 canonical demon lords. And when the next campaign starts, I want them to _stay
 dead_.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
