--- a/_posts/2020-04-20-gnoll.md
+++ b/_posts/2020-04-20-gnoll.md
@@ -66,7 +66,7 @@ variant of the damage bug we saw with foulspawn. It's less egregious due to
 their lower level, but it does mean that a bloodied gnoll benefiting from Pack
 Attack juuust manages to hit the average damage expected by the new math.
 
-The Monster Manual variants behave like they're supposed to, with their basic
+The Monster Vault variants behave like they're supposed to, with their basic
 damage hitting the expected average and the add-ons applying on top of
 that. Don't let them surround you!
 
