--- a/_posts/2020-10-25-rat.md
+++ b/_posts/2020-10-25-rat.md
@@ -31,15 +31,15 @@ carried by fleas and not by the rats themselves.
 Calling someone a "rat" is usually an insult implying cowardice, selfishness,
 and treachery, and D&D tends to ascribe these traits to rat-like
 monsters. Rats themselves are such a classic staple of low-level D&D play that
-they're a bit cliche. "Clearing rats from a basement" has become a metaphor for
-the sort of predictable tutorial quest that a lot of D&D-like video games used
-to feature a few years ago.
+they're a bit cliche. "Clearing rats from a basement" was used as the tutorial
+quest for so many D&D-like video-games that the phrase has come to mean
+"trivial, boring and predictable adventure" on the tabletop.
 
-Individual mundane rats are pretty much harmless to an adventurer, but they can
-be somewhat dangerous in large numbers, forming swarms which are likely more
-aggressive than their real-world counterparts. This being D&D, rats also come in
-Giant and Dire varieties, and these are indeed a lot bigger and more dangerous
-than their real-world counterparts.
+In 4e, individual mundane rats are pretty much harmless to an adventurer, but
+they can be somewhat dangerous in large numbers, forming swarms which are likely
+more aggressive than their real-world counterparts. This being D&D, rats also
+come in Giant and Dire varieties, and these are indeed a lot bigger and more
+dangerous than their real-world counterparts.
 
 ## The Numbers
 
@@ -90,8 +90,9 @@ them.
 ### Giant Rat (MM)
 
 Big enough to be a threat all by themselves, giant rats are Small in size,
-comparable to a halfling. They're Level 1 Minion Brutes with a speed of 6
-(climb 3) and a basic bite attack that does "minion" damage. That's all!
+though probably on the smaller side of that. They're Level 1 Minion Brutes with
+a speed of 6 (climb 3) and a basic bite attack that does "minion" damage. That's
+all!
 
 In practice you'll still want to use a "swarm" of them, only now you're tracking
 each rat individually. They're about equivalent to the classic giant rats of
