Two entries for the MM1 Let's Read

--- a/_posts/2020-11-16-satyr.md
+++ b/_posts/2020-11-16-satyr.md
@@ -8,7 +8,7 @@ tags:
 
 {::nomarkdown}
 <figure class="right">
-  <img src="{{ "/assets/wir-mm-4e-eidolon.png" | absolute_url }}"/>
+  <img src="{{ "/assets/wir-mm-4e-satyr.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2008 Wizards of the Coast
   </figcaption>
